More block tests

--- a/test/test_files/basic_yaml_block.yaml
+++ b/test/test_files/basic_yaml_block.yaml
@@ -1,7 +1,8 @@
 ﻿american:
   - Boston Red Sox
   - Detroit Tigers
-  - New York Yankees
+  - New York
+    Yankees
 national:
   - New York Mets
   - Chicago Cubs
