- More tests - Block sequences and block maps working

--- a/test/test_files/basic_yaml_block.yaml
+++ b/test/test_files/basic_yaml_block.yaml
@@ -2,7 +2,7 @@
   - Boston Red Sox
   - Detroit Tigers
   - New York
-     Yankees
+   Yankees # this should be folded to "New York Yankees" !
 national:
   - New York Mets
   - Chicago Cubs
