Updates for real INF and NAN

--- a/test/test_files/scalar.yaml
+++ b/test/test_files/scalar.yaml
@@ -21,8 +21,8 @@ hexadecimal: 0xC
 canonical-f: 1.23015e+3
 exponential: 12.3015e+02
 fixed: 1230.15
-negative infinity: -.inf ## $$$ JDG FIXME BUG $$$ ##
-#not a number: .NaN ## $$$ JDG FIXME BUG $$$ ##
+negative infinity: -.inf
+not a number: .NaN
 
 null:
 booleans: [ true, false ]
