Implement 8.10. and 8.11 from yaml specs + tests

--- a/test/test_files/block_literals.yaml
+++ b/test/test_files/block_literals.yaml
@@ -9,4 +9,27 @@
 
   next
   line
+- >
+  folded
+  text
+
+  next
+  line
+    * bullet
+    * list
+    * lines
+  last
+  line
+- >
+  folded
+  text
+
+  next
+  line
+    * bullet
+
+    * list
+    * lines
+  last
+  line
 - Last
