--- a/test/test_files/test.yaml
+++ b/test/test_files/test.yaml
@@ -107,13 +107,13 @@ quoted: ' # not a ''comment''.'
 tie-fighter: '|\-*-/|'
 
 ---
-- "Fun with \\\" \a \b \e \f \
-  \n \r \t \v \0 \
-  \  \_ \N \L \P \
-  \x41 \u0041"
+"Fun with \\\" \a \b \e \f \
+\n \r \t \v \0 \
+\  \_ \N \L \P \
+\x41 \u0041"
 
 ---
-- Mark McGwire's
+  Mark McGwire's
   year was crippled
   by a knee injury.
 
