More anchor tests

--- a/test/test_files/test.yaml
+++ b/test/test_files/test.yaml
@@ -117,4 +117,13 @@ tie-fighter: '|\-*-/|'
   year was crippled
   by a knee injury.
 
+---
+hr:
+  - Mark McGwire
+  # Following node labeled SS
+  - &SS Sammy Sosa
+rbi:
+  - *SS # Subsequent occurrence
+  - Ken Griffey
+
 ...
