--- a/test/test_files/2XXW.yml
+++ b/test/test_files/2XXW.yml
@@ -1,6 +1,6 @@
-\# Sets are represented as a
-\# Mapping where each key is
-\# associated with a null value
+# Sets are represented as a
+# Mapping where each key is
+# associated with a null value
 --- !!set
 ? Mark McGwire
 ? Sammy Sosa
