--- a/test/test_files/C4HZ.yml
+++ b/test/test_files/C4HZ.yml
@@ -1,4 +1,4 @@
-\%TAG ! tag:clarkevans.com,2002:
+%TAG ! tag:clarkevans.com,2002:
 --- !shape
   # Use the ! handle for presenting
   # tag:clarkevans.com,2002:circle
