--- a/test/test_files/J7PZ.yml
+++ b/test/test_files/J7PZ.yml
@@ -1,6 +1,6 @@
-\# Ordered maps are represented as
-\# A sequence of mappings, with
-\# each mapping having one key
+# Ordered maps are represented as
+# A sequence of mappings, with
+# each mapping having one key
 --- !!omap
 - Mark McGwire: 65
 - Sammy Sosa: 63
