--- a/test/test_files/JHB9.yml
+++ b/test/test_files/JHB9.yml
@@ -1,10 +1,10 @@
-\# Ranking of 1998 home runs
+# Ranking of 1998 home runs
 ---
 - Mark McGwire
 - Sammy Sosa
 - Ken Griffey
 
-\# Team ranking
+# Team ranking
 ---
 - Chicago Cubs
 - St Louis Cardinals
