--- a/test/test_files/5TYM.yml
+++ b/test/test_files/5TYM.yml
@@ -1,8 +1,8 @@
-\%TAG !m! !my-
+%TAG !m! !my-
 --- # Bulb here
 !m!light fluorescent
 ...
-\%TAG !m! !my-
+%TAG !m! !my-
 --- # Color here
 !m!light green
 
