--- a/test/test_files/9WXW.yml
+++ b/test/test_files/9WXW.yml
@@ -1,8 +1,8 @@
-\# Private
+# Private
 !foo "bar"
 ...
-\# Global
-\%TAG ! tag:example.com,2000:app/
+# Global
+%TAG ! tag:example.com,2000:app/
 ---
 !foo "bar"
 
