--- a/test/test_files/DBG4.yml
+++ b/test/test_files/DBG4.yml
@@ -1,10 +1,10 @@
-\# Outside flow collection:
+# Outside flow collection:
 - ::vector
 - ": - ()"
 - Up, up, and away!
 - -123
 - http://example.com/foo#bar
-\# Inside flow collection:
+# Inside flow collection:
 - [ ::vector,
   ": - ()",
   "Up, up and away!",
