Add parsers implementing Flow Styles section.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable(
     parse_test
     characters.cpp
     basic_structures.cpp
+    flow_style.cpp
     block.cpp
     flow.cpp
     parser.cpp
