Apparently <TAB> means \t in the input test data.  Sigh.

--- a/test/test_files/6HB6.yml
+++ b/test/test_files/6HB6.yml
@@ -8,6 +8,6 @@ Not indented:
  Flow style: [    # Leading spaces
    By two,        # in flow style
   Also by two,    # are neither
-  <TAB>Still by two   # content nor
+  	Still by two   # content nor
     ]             # indentation.
 
