--- a/test/test_files/NP9H.yml
+++ b/test/test_files/NP9H.yml
@@ -1,6 +1,6 @@
 "folded<SPC>
-to a space,<TAB>
+to a space,	
 <SPC>
-to a line feed, or <TAB>\
- \ <TAB>non-content"
+to a line feed, or 	\
+ \ 	non-content"
 
