--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -82,7 +82,7 @@ else ()
 endif()
 
 include(test_files/index.cmake)
-foreach (yml_file_root ${yml_file_index})
+foreach (yml_file_root ${yml_file_index} ${error_yml_file_index})
     add_test(
         parse_test_${yml_file_root}
         ${CMAKE_CURRENT_BINARY_DIR}/parse_test
@@ -102,6 +102,7 @@ endforeach()
 
 set(invalid_yaml_test_suite_files
     2SXE # Has the pattern a: b: without a line break.
+    ${error_yml_file_index}
 )
 foreach (yml_file_root ${invalid_yaml_test_suite_files})
     set_tests_properties(parse_test_${yml_file_root} PROPERTIES WILL_FAIL true)
