Mark NHX8 and P94K as expected failures.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -102,6 +102,8 @@ endforeach()
 
 set(invalid_yaml_test_suite_files
     2SXE # Has the pattern a: b: without a line break.
+    NHX8 # Has a bare "\" (not starting an escape sequence) outside of any single- or double-quoted string.
+    P94K # Has a bare "\" (not starting an escape sequence) outside of any single- or double-quoted string.
     ${error_yml_file_index}
 )
 foreach (yml_file_root ${invalid_yaml_test_suite_files})
