--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -251,7 +251,21 @@ set(invalid_comparison_tests
     # Contains "!!str: bar" as a map entry, but the ":" is a valid tag-char
     parse_compare_test_WZ62_in_vs_out
 
-    parse_compare_test_5WE3_in_vs_json # null vs."null" mismatch TODO: Address later.
+    # Badly broken test (libyaml-specific stuff, plus a literal with a
+    # non-comment "# <comment>" pattern in it.
+    parse_compare_test_M7A3_in_vs_out
+
+    # YAML version is empty (-- no documents), and the JSON version is a doc
+    # containing a single null.
+    parse_compare_test_AVM7_in_vs_json
+
+    # TODO: Address later.  This is due to the lack of typesafe parsing.  This
+    # is the thing that requires the Nablialek trick.
+    # null vs."null" mismatch
+    parse_compare_test_7W2P_in_vs_json
+    parse_compare_test_JTV5_in_vs_json
+    parse_compare_test_5WE3_in_vs_json
+    parse_compare_test_W42U_in_vs_json
 )
 
 foreach (yml_file_root ${yml_file_index})
