--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "yaml-test-suite"]
 	path = yaml-test-suite
 	url = https://github.com/yaml/yaml-test-suite.git
+[submodule "libyaml"]
+	path = libyaml
+	url = https://github.com/yaml/libyaml.git
