Add simple CMake file to build libyaml and one of its test apps.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -18,6 +18,8 @@ endif()
 
 set(BUILD_HEADER_ONLY_TEST false CACHE BOOL "Set to true to build a test app with -DYAML_HEADER_ONLY=1.")
 
+add_definitions(${cxx_defs})
+
 
 ##################################################
 # Header-only build test
