--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,15 @@
 cmake_minimum_required(VERSION 3.5)
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
+set(cxx_defs)
 set(std_flag) 
 set(clang_on_linux false)
 if (CMAKE_CXX_COMPILER_ID STREQUAL Clang)
     set(std_flag -std=c++11)
-    add_definitions(
+    add_definitions(-g -Wall)
+    set(cxx_defs
         ${std_flag}
         -stdlib=libc++
-        -g
-        -Wall
         -Wno-parentheses
         -ftemplate-depth-300
     )
@@ -18,7 +18,8 @@ if (CMAKE_CXX_COMPILER_ID STREQUAL Clang)
     endif ()
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL GNU)
     set(std_flag -std=c++11)
-    add_definitions(${std_flag} -g -Wall -ftemplate-depth-300 -Wno-parentheses)
+    add_definitions(-g -Wall) 
+    set(cxx_defs ${std_flag} -ftemplate-depth-300 -Wno-parentheses) 
 endif ()
 
 include(dependencies)
@@ -28,3 +29,5 @@ target_include_directories(yaml INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(yaml INTERFACE boost)
 
 add_subdirectory(test)
+
+add_subdirectory(compare_libyaml)
