Add libyaml_check CMake target.

--- a/compare_libyaml/test/CMakeLists.txt
+++ b/compare_libyaml/test/CMakeLists.txt
@@ -2,6 +2,7 @@ include(CTest)
 
 enable_testing()
 
+add_custom_target(libyaml_check COMMAND ${CMAKE_CTEST_COMMAND} -C ${CMAKE_CFG_INTDIR})
 
 include(${CMAKE_HOME_DIRECTORY}/test/test_files/index.cmake)
 include(${CMAKE_HOME_DIRECTORY}/test/test_files/index_xfail.cmake)
